# Reasoning-Drift-Detection-in-LLMs-using-SAE-Features

./: .gitignore  README.md  codebase_review.md  main.py  proposal.md  pyproject.toml
config/: config.yaml
config/analysis/: default.yaml
config/dataset/: default.yaml
config/model/: qwen3_1_7b.yaml
config/patching/: default.yaml
config/sae/: qwen3_sae.yaml
config/visualization/: default.yaml
data/processed/: outputs.json  outputs_10_sanity.json  prompts.json  prompts_test_10.json
data/raw/: problems.json
notebooks/: 03_feature_analysis.ipynb  04_causal_validation.ipynb
scripts/: build_dataset.py  curate_problems.py  run_all.py  run_all.sh  run_analysis.py  run_extended_analysis.py  run_inference.py  run_patching.py  run_sae_projection.py  run_visualization.py  verify_sparsity.py
src/: config.py
src/analysis/: layerwise.py  metrics.py  stability.py
src/dataset/: answer_parser.py  hint_generator.py  problem_loader.py  prompt_builder.py
src/inference/: activation_extractor.py  model_loader.py  runner.py
src/patching/: effect_measurer.py  patch_runner.py
src/sae/: feature_extractor.py  projector.py  sae_loader.py
src/visualization/: __init__.py  causal_plots.py  dashboard.py  distributions.py  heatmaps.py  histograms.py  profiles.py  relationships.py  style.py
tests/: test_activation_extractor.py  test_metrics.py  test_prompt_builder.py  test_sae_loader.py
