[project]
name = "reasoning-drift-detection-in-llms-using-sae-features"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=5.0.0",
    "einops>=0.8.2",
    "huggingface-hub>=1.18.0",
    "hydra-core>=1.3.2",
    "jsonlines>=4.0.0",
    "langchain>=1.3.4",
    "langchain-groq>=1.1.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "nbformat>=4.2.0",
    "plotly>=6.8.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sae-lens>=6.44.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.1",
    "transformer-lens>=2.0.0",
    "transformers>=5.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
include = ["."]
exclude = [".venv", "**/__pycache__", "**/__pyrefly_virtual__/**", "C:/__pyrefly_virtual__/**"]
executionEnvironments = [
  { root = "." }
]
extraPaths = ["."]
